--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>Trade Journal</title>
 </head>
 <body>
+
   <h1>Trade Journal</h1>
+
   <a href="login.html">Go to Login</a>
+
 </body>
 </html>
-<a href="login.html">Go to Login</a>
