--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <h1>Trade Journal</h1>
 
   <a href="login.html">Go to Login</a>
-
+<br><br>
+<a href="dashboard.html">Go to Dashboard</a>
 </body>
 </html>
