--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <h1>Trade Journal</h1>
 
   <a href="login.html">Go to Login</a>
-<br><br>
-<a href="dashboard.html">Go to Dashboard</a>
+<button onclick="window.location.href='dashboard.html'">
+  Go to Dashboard
+</button>
 </body>
 </html>
