--- a/dashboard.html
+++ b/dashboard.html
@@ -152,7 +152,21 @@
 
   <!-- MAIN CONTENT -->
   <div class="main">
-    <h1>Dashboard</h1>
+    <div style="display:flex; justify-content:space-between; align-items:center;">
+  <h1>Dashboard</h1>
+  <button id="addTradeBtn" style="
+    background:#7c3aed;
+    color:white;
+    border:none;
+    padding:10px 14px;
+    border-radius:8px;
+    cursor:pointer;
+    font-weight:600;
+  ">
+    + Add Trade
+  </button>
+</div>
+
 
     <!-- STATS -->
     <div class="stats">
