--- a/dashboard.html
+++ b/dashboard.html
@@ -198,7 +198,7 @@
 <div style="margin-top:30px; background:#121826; padding:20px; border-radius:12px;">
   <h3>Performance Report</h3>
 
-  <canvas id="equityChart" height="120" style="width:100%; margin-top:10px;"></canvas>
+  <canvas id="equityChart" width="800" height="200" style="width:100%; margin-top:10px;"></canvas>
 
   <div style="display:flex; gap:20px; margin-top:14px; font-size:14px;">
     <div>Wins: <strong id="winsCount">0</strong></div>
@@ -295,6 +295,22 @@ document.addEventListener("DOMContentLoaded", () => {
     updateStats();
   };
 
+function updateStats() {
+  let total = 0;
+  let wins = 0;
+  const dayTotals = {};
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+
+  // variables
+  const modal = document.getElementById("tradeModal");
+  const pnlEl = document.getElementById("totalPnl");
+  const winEl = document.getElementById("winRate");
+  const addBtn = document.getElementById("addTradeBtn");
+
+  let trades = JSON.parse(localStorage.getItem("trades")) || [];
+
+  // ✅ 1. updateStats FUNCTION
   function updateStats() {
     let total = 0;
     let wins = 0;
@@ -303,7 +319,6 @@ document.addEventListener("DOMContentLoaded", () => {
     trades.forEach(t => {
       total += t.pnl;
       if (t.pnl > 0) wins++;
-
       dayTotals[t.day] = (dayTotals[t.day] || 0) + t.pnl;
     });
 
@@ -314,32 +329,102 @@ document.addEventListener("DOMContentLoaded", () => {
     pnlEl.textContent = "$" + total.toFixed(2);
     winEl.textContent = winRate + "%";
 
-    document.querySelectorAll(".day").forEach(d => {
-      d.classList.remove("profit", "loss");
-      d.innerHTML = d.dataset.day;
-    });
+    document.getElementById("winsCount").innerText = wins;
+    document.getElementById("lossCount").innerText = trades.length - wins;
 
-    document.querySelectorAll(".day").forEach(d => {
-      const day = Number(d.dataset.day);
-      const totalDay = dayTotals[day];
-
-      if (totalDay > 0) {
-        d.classList.add("profit");
-        d.innerHTML = `${day}<br>+$${totalDay}`;
-      } else if (totalDay < 0) {
-        d.classList.add("loss");
-        d.innerHTML = `${day}<br>-$${Math.abs(totalDay)}`;
-      }
-    });
+    drawEquityCurve(); // 👈 IMPORTANT
   }
+  // 🔴 updateStats ENDS HERE
+  // =========================
 
-  updateStats();
+  // ✅ 2. PLACE drawEquityCurve RIGHT HERE
+  function drawEquityCurve() {
+    const canvas = document.getElementById("equityChart");
+    const ctx = canvas.getContext("2d");
+
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+    if (trades.length === 0) return;
+
+    let equity = 0;
+    const points = trades.map(t => {
+      equity += t.pnl;
+      return equity;
+    });
+
+    const max = Math.max(...points, 0);
+    const min = Math.min(...points, 0);
+    const range = max - min || 1;
+
+    const padding = 20;
+    const w = canvas.width;
+    const h = canvas.height;
+
+    ctx.strokeStyle = "#22c55e";
+    ctx.lineWidth = 2;
+    ctx.beginPath();
+
+    points.forEach((val, i) => {
+      const x = padding + (i / (points.length - 1 || 1)) * (w - padding * 2);
+      const y = h - padding - ((val - min) / range) * (h - padding * 2);
+
+      if (i === 0) ctx.moveTo(x, y);
+      else ctx.lineTo(x, y);
+    });
+
+    ctx.stroke();
+  }
+  // 🔴 drawEquityCurve ENDS HERE
+  // ============================
+
+  updateStats(); // run once on page load
+
 });
-  // ---- REPORTS ----
-document.getElementById("winsCount").innerText = wins;
-document.getElementById("lossCount").innerText = trades.length - wins;
+</script>
 
-drawEquityCurve();
+  trades.forEach(t => {
+    total += t.pnl;
+    if (t.pnl > 0) wins++;
+
+    dayTotals[t.day] = (dayTotals[t.day] || 0) + t.pnl;
+  });
+
+  const winRate = trades.length
+    ? Math.round((wins / trades.length) * 100)
+    : 0;
+
+  pnlEl.textContent = "$" + total.toFixed(2);
+  winEl.textContent = winRate + "%";
+
+  // Update wins / losses
+  document.getElementById("winsCount").innerText = wins;
+  document.getElementById("lossCount").innerText = trades.length - wins;
+
+  // Reset calendar
+  document.querySelectorAll(".day").forEach(d => {
+    d.classList.remove("profit", "loss");
+    d.innerHTML = d.dataset.day;
+  });
+
+  // Apply calendar colors
+  document.querySelectorAll(".day").forEach(d => {
+    const day = Number(d.dataset.day);
+    const totalDay = dayTotals[day];
+
+    if (totalDay > 0) {
+      d.classList.add("profit");
+      d.innerHTML = `${day}<br>+$${totalDay}`;
+    } else if (totalDay < 0) {
+      d.classList.add("loss");
+      d.innerHTML = `${day}<br>-$${Math.abs(totalDay)}`;
+    }
+  });
+
+  drawEquityCurve(); // ✅ IMPORTANT
+}
+
+});
+
 function drawEquityCurve() {
   const canvas = document.getElementById("equityChart");
   const ctx = canvas.getContext("2d");
