--- a/dashboard.html
+++ b/dashboard.html
@@ -198,7 +198,7 @@
 <div style="margin-top:30px; background:#121826; padding:20px; border-radius:12px;">
   <h3>Performance Report</h3>
 
-  <canvas id="equityChart" width="800" height="200" style="width:100%; margin-top:10px;"></canvas>
+  <canvas id="equityChart" width="800" height="200" style="width:100%;"></canvas>
 
   <div style="display:flex; gap:20px; margin-top:14px; font-size:14px;">
     <div>Wins: <strong id="winsCount">0</strong></div>
@@ -302,7 +302,6 @@ function updateStats() {
 <script>
 document.addEventListener("DOMContentLoaded", () => {
 
-  // variables
   const modal = document.getElementById("tradeModal");
   const pnlEl = document.getElementById("totalPnl");
   const winEl = document.getElementById("winRate");
@@ -310,7 +309,29 @@ document.addEventListener("DOMContentLoaded", () => {
 
   let trades = JSON.parse(localStorage.getItem("trades")) || [];
 
-  // ✅ 1. updateStats FUNCTION
+  addBtn.onclick = () => {
+    modal.style.display = "flex";
+  };
+
+  window.closeModal = () => {
+    modal.style.display = "none";
+  };
+
+  window.saveTrade = () => {
+    const pnlInput = document.getElementById("pnlInput");
+    const pnl = Number(pnlInput.value);
+    if (isNaN(pnl)) return;
+
+    const today = new Date().getDate();
+
+    trades.push({ pnl, day: today });
+    localStorage.setItem("trades", JSON.stringify(trades));
+
+    pnlInput.value = "";
+    closeModal();
+    updateStats();
+  };
+
   function updateStats() {
     let total = 0;
     let wins = 0;
@@ -332,10 +353,28 @@ document.addEventListener("DOMContentLoaded", () => {
     document.getElementById("winsCount").innerText = wins;
     document.getElementById("lossCount").innerText = trades.length - wins;
 
-    drawEquityCurve(); // 
+    document.querySelectorAll(".day").forEach(d => {
+      d.classList.remove("profit", "loss");
+      d.innerHTML = d.dataset.day;
+    });
+
+    document.querySelectorAll(".day").forEach(d => {
+      const day = Number(d.dataset.day);
+      const totalDay = dayTotals[day];
+
+      if (totalDay > 0) {
+        d.classList.add("profit");
+        d.innerHTML = `${day}<br>+$${totalDay}`;
+      } else if (totalDay < 0) {
+        d.classList.add("loss");
+        d.innerHTML = `${day}<br>-$${Math.abs(totalDay)}`;
+      }
+    });
+
+    drawEquityCurve();
   }
 
-   function drawEquityCurve() {
+  function drawEquityCurve() {
     const canvas = document.getElementById("equityChart");
     const ctx = canvas.getContext("2d");
 
@@ -371,91 +410,11 @@ document.addEventListener("DOMContentLoaded", () => {
 
     ctx.stroke();
   }
-  updateStats(); 
 
+  updateStats(); // run on load
 });
 </script>
 
-  trades.forEach(t => {
-    total += t.pnl;
-    if (t.pnl > 0) wins++;
-
-    dayTotals[t.day] = (dayTotals[t.day] || 0) + t.pnl;
-  });
-
-  const winRate = trades.length
-    ? Math.round((wins / trades.length) * 100)
-    : 0;
-
-  pnlEl.textContent = "$" + total.toFixed(2);
-  winEl.textContent = winRate + "%";
-
-  // Update wins / losses
-  document.getElementById("winsCount").innerText = wins;
-  document.getElementById("lossCount").innerText = trades.length - wins;
-
-  // Reset calendar
-  document.querySelectorAll(".day").forEach(d => {
-    d.classList.remove("profit", "loss");
-    d.innerHTML = d.dataset.day;
-  });
-
-  // Apply calendar colors
-  document.querySelectorAll(".day").forEach(d => {
-    const day = Number(d.dataset.day);
-    const totalDay = dayTotals[day];
-
-    if (totalDay > 0) {
-      d.classList.add("profit");
-      d.innerHTML = `${day}<br>+$${totalDay}`;
-    } else if (totalDay < 0) {
-      d.classList.add("loss");
-      d.innerHTML = `${day}<br>-$${Math.abs(totalDay)}`;
-    }
-  });
-
-  drawEquityCurve();
-}
-
-});
-
-function drawEquityCurve() {
-  const canvas = document.getElementById("equityChart");
-  const ctx = canvas.getContext("2d");
-
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-  if (trades.length === 0) return;
-
-  let equity = 0;
-  const points = trades.map(t => {
-    equity += t.pnl;
-    return equity;
-  });
-
-  const max = Math.max(...points, 0);
-  const min = Math.min(...points, 0);
-  const range = max - min || 1;
-
-  const padding = 20;
-  const w = canvas.width;
-  const h = canvas.height;
-
-  ctx.strokeStyle = "#22c55e";
-  ctx.lineWidth = 2;
-  ctx.beginPath();
-
-  points.forEach((val, i) => {
-    const x = padding + (i / (points.length - 1 || 1)) * (w - padding * 2);
-    const y = h - padding - ((val - min) / range) * (h - padding * 2);
-
-    if (i === 0) ctx.moveTo(x, y);
-    else ctx.lineTo(x, y);
-  });
-
-  ctx.stroke();
-}
-</script>
 
 
 </body>
