--- a/dashboard.html
+++ b/dashboard.html
@@ -9,21 +9,17 @@
 
     body {
       margin: 0;
-      font-family: Inter, Arial, sans-serif;
+      font-family: Arial, sans-serif;
       background: #0b0f1a;
       color: #e5e7eb;
       display: flex;
       height: 100vh;
     }
 
-    /* SIDEBAR */
     .sidebar {
       width: 220px;
       background: #0e1322;
       padding: 20px;
-      display: flex;
-      flex-direction: column;
-      gap: 14px;
     }
 
     .logo {
@@ -33,39 +29,17 @@
       margin-bottom: 20px;
     }
 
-    .nav a {
-      display: block;
-      padding: 10px 12px;
-      border-radius: 8px;
-      color: #c7d2fe;
-      text-decoration: none;
-      font-size: 14px;
-    }
-
-    .nav a.active,
-    .nav a:hover {
-      background: #1a2040;
-      color: white;
-    }
-
-    /* MAIN */
     .main {
       flex: 1;
       padding: 24px;
       overflow-y: auto;
     }
 
-    h1 {
-      margin-top: 0;
-      margin-bottom: 20px;
-    }
-
-    /* STATS */
     .stats {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       gap: 16px;
-      margin-bottom: 28px;
+      margin-bottom: 24px;
     }
 
     .stat {
@@ -74,30 +48,11 @@
       border-radius: 12px;
     }
 
-    .stat p {
-      margin: 0;
-      font-size: 13px;
-      color: #9ca3af;
-    }
-
-    .stat h2 {
-      margin-top: 6px;
-      font-size: 22px;
-      color: white;
-    }
-
-    /* CALENDAR */
     .calendar {
       background: #121826;
       padding: 20px;
       border-radius: 12px;
-    }
-
-    .calendar-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 14px;
+      margin-top: 20px;
     }
 
     .calendar-grid {
@@ -108,259 +63,123 @@
 
     .day {
       height: 90px;
-      border-radius: 10px;
       background: #1f2937;
-      padding: 8px;
+      border-radius: 8px;
+      padding: 6px;
       font-size: 12px;
-      color: #9ca3af;
     }
 
-    .profit {
-      background: #064e3b;
-      color: #d1fae5;
-    }
+    .profit { background: #064e3b; }
+    .loss { background: #3f1d25; }
 
-    .loss {
-      background: #3f1d25;
-      color: #fee2e2;
-    }
-
-    .back {
-      margin-top: 20px;
-      display: inline-block;
-      color: #facc15;
-      text-decoration: none;
+    button {
+      cursor: pointer;
     }
   </style>
 </head>
 
 <body>
 
-  <!-- SIDEBAR -->
-  <div class="sidebar">
-    <div class="logo">📈 Trade Journal</div>
+<div class="sidebar">
+  <div class="logo">📈 Trade Journal</div>
+</div>
 
-    <div class="nav">
-      <a class="active" href="#">Dashboard</a>
-      <a href="#">Daily Journal</a>
-      <a href="#">Trades</a>
-      <a href="#">Backtesting</a>
-      <a href="#">Reports</a>
-      <a href="#">Settings</a>
+<div class="main">
+
+  <div style="display:flex;justify-content:space-between;align-items:center;">
+    <h1>Dashboard</h1>
+    <button id="addTradeBtn"
+      style="background:#7c3aed;color:white;border:none;padding:10px 14px;border-radius:8px;">
+      + Add Trade
+    </button>
+  </div>
+
+  <div class="stats">
+    <div class="stat"><p>Total PnL</p><h2 id="totalPnl">$0</h2></div>
+    <div class="stat"><p>Win Rate</p><h2 id="winRate">0%</h2></div>
+    <div class="stat"><p>Wins</p><h2 id="winsCount">0</h2></div>
+    <div class="stat"><p>Losses</p><h2 id="lossCount">0</h2></div>
+  </div>
+
+  <div class="calendar">
+    <h3>Calendar</h3>
+    <div class="calendar-grid">
+      <div class="day" data-day="1">1</div>
+      <div class="day" data-day="2">2</div>
+      <div class="day" data-day="3">3</div>
+      <div class="day" data-day="4">4</div>
+      <div class="day" data-day="5">5</div>
+      <div class="day" data-day="6">6</div>
+      <div class="day" data-day="7">7</div>
     </div>
   </div>
 
-  <!-- MAIN CONTENT -->
-  <div class="main">
-    <div style="display:flex; justify-content:space-between; align-items:center;">
-  <h1>Dashboard</h1>
-  <button id="addTradeBtn" style="
-    background:#7c3aed;
-    color:white;
-    border:none;
-    padding:10px 14px;
-    border-radius:8px;
-    cursor:pointer;
-    font-weight:600;
-  ">
-    + Add Trade
-  </button>
-</div>
-
-
-    <!-- STATS -->
-    <div class="stats">
-      <div class="stat">
-        <p>Total PnL</p>
-        <h2 id="totalPnl">$0</h2>
-      </div>
-      <div class="stat">
-        <p>Win Rate</p>
-        <h2 id="winRate">0%</h2>
-      </div>
-      <div class="stat">
-        <p>Avg RR</p>
-        <h2>1 : 2.1</h2>
-      </div>
-      <div class="stat">
-        <p>Max Drawdown</p>
-        <h2>-6.4%</h2>
-      </div>
-    </div>
-
-    <!-- CALENDAR -->
-    <div class="calendar">
-      <div class="calendar-header">
-        <strong>June 2024</strong>
-        <span>Daily Performance</span>
-      </div>
-      <!-- REPORTS -->
-<div style="margin-top:30px; background:#121826; padding:20px; border-radius:12px;">
-  <h3>Performance Report</h3>
-
-  <canvas id="equityChart" width="800" height="200" style="width:100%;"></canvas>
-
-  <div style="display:flex; gap:20px; margin-top:14px; font-size:14px;">
-    <div>Wins: <strong id="winsCount">0</strong></div>
-    <div>Losses: <strong id="lossCount">0</strong></div>
+  <div style="margin-top:30px;background:#121826;padding:20px;border-radius:12px;">
+    <h3>Equity Curve</h3>
+    <canvas id="equityChart" width="800" height="200" style="width:100%;"></canvas>
   </div>
-</div>
-      
-<div class="calendar-grid">
-  <div class="day" data-day="1">1</div>
-  <div class="day" data-day="2">2</div>
-  <div class="day" data-day="3">3</div>
-  <div class="day" data-day="4">4</div>
-  <div class="day" data-day="5">5</div>
-  <div class="day" data-day="6">6</div>
-  <div class="day" data-day="7">7</div>
-</div>
+
 </div>
 
-    <a class="back" href="index.html">← Back to Home</a>
-  </div>
-<!-- ADD TRADE MODAL -->
+<!-- MODAL -->
 <div id="tradeModal" style="
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.6);
-  display:none;
-  align-items:center;
-  justify-content:center;
-  z-index:50;
+  position:fixed;inset:0;background:rgba(0,0,0,.6);
+  display:none;align-items:center;justify-content:center;
 ">
-  <div style="
-    background:#121826;
-    padding:20px;
-    border-radius:12px;
-    width:300px;
-  ">
+  <div style="background:#121826;padding:20px;border-radius:12px;width:300px;">
     <h3>Add Trade</h3>
 
-    <label>PnL ($)</label>
-    <input id="pnlInput" type="number" style="width:100%;padding:8px;margin:8px 0">
+    <input id="pnlInput" type="number" placeholder="PnL"
+      style="width:100%;padding:8px;margin:8px 0">
 
-    <button
-  onclick="saveTrade(this)"
-  style="
-    width:100%;
-    background:#22c55e;
-    border:none;
-    padding:10px;
-    border-radius:8px;
-    font-weight:600;
-    cursor:pointer;
-  "
->
-  Save Trade
-</button>
+    <button onclick="saveTrade(this)" style="
+      width:100%;background:#22c55e;border:none;
+      padding:10px;border-radius:8px;">
+      Save Trade
+    </button>
 
     <button onclick="closeModal()" style="
-      width:100%;
-      background:#374151;
-      border:none;
-      padding:10px;
-      border-radius:8px;
-      margin-top:8px;
-      cursor:pointer;
-      color:white;
-    ">Cancel</button>
+      width:100%;margin-top:8px;background:#374151;
+      border:none;padding:10px;border-radius:8px;color:white;">
+      Cancel
+    </button>
   </div>
 </div>
+
 <script>
 document.addEventListener("DOMContentLoaded", () => {
 
   const modal = document.getElementById("tradeModal");
-  const pnlEl = document.getElementById("totalPnl");
-  const winEl = document.getElementById("winRate");
   const addBtn = document.getElementById("addTradeBtn");
 
   let trades = JSON.parse(localStorage.getItem("trades")) || [];
 
   addBtn.onclick = () => {
-  addBtn.disabled = true;
-  addBtn.style.opacity = "0.6";
-  modal.style.display = "flex";
-};
-
-  window.closeModal = () => {
-  modal.style.display = "none";
-  addBtn.disabled = false;
-  addBtn.style.opacity = "1";
-};
-
-window.saveTrade = (btn) => {
-  btn.disabled = true;
-
-  const pnlInput = document.getElementById("pnlInput");
-  const pnl = Number(pnlInput.value);
-
-  if (isNaN(pnl)) {
-    btn.disabled = false;
-    return;
-  }
-
-  const today = new Date().getDate();
-
-  trades.push({ pnl, day: today });
-  localStorage.setItem("trades", JSON.stringify(trades));
-
-  pnlInput.value = "";
-  btn.disabled = false;
-  closeModal();
-  updateStats();
-};
-  
-function updateStats() {
-  let total = 0;
-  let wins = 0;
-  const dayTotals = {};
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-
-  const modal = document.getElementById("tradeModal");
-  const pnlEl = document.getElementById("totalPnl");
-  const winEl = document.getElementById("winRate");
-  const addBtn = document.getElementById("addTradeBtn");
-
-  let trades = JSON.parse(localStorage.getItem("trades")) || [];
-
-  addBtn.onclick = () => {
+    addBtn.disabled = true;
     modal.style.display = "flex";
   };
 
   window.closeModal = () => {
     modal.style.display = "none";
+    addBtn.disabled = false;
   };
 
-  window.saveTrade = (event) => {
-  const saveBtn = event.target;
-  saveBtn.disabled = true;
+  window.saveTrade = (btn) => {
+    btn.disabled = true;
+    const pnl = Number(document.getElementById("pnlInput").value);
+    if (isNaN(pnl)) { btn.disabled = false; return; }
 
-  const pnlInput = document.getElementById("pnlInput");
-  const pnl = Number(pnlInput.value);
+    trades.push({ pnl, day: new Date().getDate() });
+    localStorage.setItem("trades", JSON.stringify(trades));
 
-  if (isNaN(pnl)) {
-    saveBtn.disabled = false;
-    return;
-  }
-
-  const today = new Date().getDate();
-
-  trades.push({ pnl, day: today });
-  localStorage.setItem("trades", JSON.stringify(trades));
-
-  pnlInput.value = "";
-  saveBtn.disabled = false;
-  closeModal();
-  updateStats();
-};
-
+    document.getElementById("pnlInput").value = "";
+    btn.disabled = false;
+    closeModal();
+    update();
   };
 
-  function updateStats() {
-    let total = 0;
-    let wins = 0;
+  function update() {
+    let total = 0, wins = 0;
     const dayTotals = {};
 
     trades.forEach(t => {
@@ -369,79 +188,47 @@ document.addEventListener("DOMContentLoaded", () => {
       dayTotals[t.day] = (dayTotals[t.day] || 0) + t.pnl;
     });
 
-    const winRate = trades.length
-      ? Math.round((wins / trades.length) * 100)
-      : 0;
-
-    pnlEl.textContent = "$" + total.toFixed(2);
-    winEl.textContent = winRate + "%";
-
+    document.getElementById("totalPnl").innerText = "$" + total;
+    document.getElementById("winRate").innerText =
+      trades.length ? Math.round(wins / trades.length * 100) + "%" : "0%";
     document.getElementById("winsCount").innerText = wins;
     document.getElementById("lossCount").innerText = trades.length - wins;
 
     document.querySelectorAll(".day").forEach(d => {
-      d.classList.remove("profit", "loss");
-      d.innerHTML = d.dataset.day;
-    });
-
-    document.querySelectorAll(".day").forEach(d => {
       const day = Number(d.dataset.day);
-      const totalDay = dayTotals[day];
-
-      if (totalDay > 0) {
-        d.classList.add("profit");
-        d.innerHTML = `${day}<br>+$${totalDay}`;
-      } else if (totalDay < 0) {
-        d.classList.add("loss");
-        d.innerHTML = `${day}<br>-$${Math.abs(totalDay)}`;
-      }
+      const val = dayTotals[day];
+      d.className = "day";
+      d.innerHTML = day;
+      if (val > 0) { d.classList.add("profit"); d.innerHTML += "<br>+$"+val; }
+      if (val < 0) { d.classList.add("loss"); d.innerHTML += "<br>-$"+Math.abs(val); }
     });
 
-    drawEquityCurve();
+    drawChart();
   }
 
-  function drawEquityCurve() {
-    const canvas = document.getElementById("equityChart");
-    const ctx = canvas.getContext("2d");
+  function drawChart() {
+    const c = document.getElementById("equityChart");
+    const ctx = c.getContext("2d");
+    ctx.clearRect(0,0,c.width,c.height);
 
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    let eq = 0;
+    const pts = trades.map(t => (eq += t.pnl));
+    if (!pts.length) return;
 
-    if (trades.length === 0) return;
-
-    let equity = 0;
-    const points = trades.map(t => {
-      equity += t.pnl;
-      return equity;
-    });
-
-    const max = Math.max(...points, 0);
-    const min = Math.min(...points, 0);
-    const range = max - min || 1;
-
-    const padding = 20;
-    const w = canvas.width;
-    const h = canvas.height;
-
-    ctx.strokeStyle = "#22c55e";
-    ctx.lineWidth = 2;
+    const max = Math.max(...pts), min = Math.min(...pts);
     ctx.beginPath();
-
-    points.forEach((val, i) => {
-      const x = padding + (i / (points.length - 1 || 1)) * (w - padding * 2);
-      const y = h - padding - ((val - min) / range) * (h - padding * 2);
-
-      if (i === 0) ctx.moveTo(x, y);
-      else ctx.lineTo(x, y);
+    pts.forEach((v,i) => {
+      const x = i/(pts.length-1||1)*c.width;
+      const y = c.height - ((v-min)/(max-min||1))*c.height;
+      i ? ctx.lineTo(x,y) : ctx.moveTo(x,y);
     });
-
+    ctx.strokeStyle = "#22c55e";
     ctx.stroke();
   }
 
-  updateStats(); // run on load
+  update();
 });
 </script>
-
-
 
 </body>
 </html>
