--- a/dashboard.html
+++ b/dashboard.html
@@ -140,17 +140,37 @@
 
     <input id="pnlInput" type="number" placeholder="PnL"
       style="width:100%;padding:8px;margin:8px 0">
-   <button onclick="closeModal()">Cancel</button>
-      width:100%;background:#22c55e;border:none;
-      padding:10px;border-radius:8px;">
-      Save Trade
-    </button>
+<button
+  onclick="saveTrade(this)"
+  style="
+    width:100%;
+    background:#22c55e;
+    border:none;
+    padding:10px;
+    border-radius:8px;
+    font-weight:600;
+    cursor:pointer;
+  "
+>
+  Save Trade
+</button>
 
-    <button onclick="closeModal()" style="
-      width:100%;margin-top:8px;background:#374151;
-      border:none;padding:10px;border-radius:8px;color:white;">
-      Cancel
-    </button>
+<button
+  onclick="closeModal()"
+  style="
+    width:100%;
+    background:#374151;
+    border:none;
+    padding:10px;
+    border-radius:8px;
+    margin-top:8px;
+    cursor:pointer;
+    color:white;
+  "
+>
+  Cancel
+</button>
+
   </div>
 </div>
 
